[metadata]
name = pocket2pinboard
summary = Import pocket articles into pinboard.in
description-file =
    README.rst
author = Doug Hellmann
author-email = doug@doughellmann.com
home-page = http://pypi.python.org/pypi/pocket2pinboard
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    pocket2pinboard

[entry_points]
console_scripts =
    pocket2pinboard = pocket2pinboard.cmd:main
